syntax = "proto3";
package idaproto;
option go_package = "../pbs";
import "common.proto";


//请求
message spin {
  req_head head = 1;
  spin_opt opt = 2;
}

//牌
message card {
  int32 card_id = 1; //牌id
  bool is_pay_table = 2; //是否为payTable
  bool is_wild = 3; // 是否百搭
  int32 x = 4; //x坐标
  int32 y = 5; //y坐标
  float multiple = 6;
}

//牌列表
message cards {
  repeated card cards = 1; //牌id列表
  int64 amount = 2;
}

message spin_ack {
  ack_head head = 1;
  spin_opt opt = 2;
  int64 total_win = 3; //总赢取
  repeated spin_step step_list = 4; //转动步骤列表
  int32 txn_id = 5; //交易id
  int64 before_amount = 6; //before余额
  int64 after_amount = 7; //after余额
}

// 转动步骤
message spin_step {
  int32 id = 1; //id
  int32 pid = 2; //pid
  int64 win = 3; //赢取
  repeated cards card_list = 4; //结果牌id列表
  repeated cards line_list = 5; //划线牌列表
  int32 jackpot_id = 6; //奖池id
  int32 type = 7; // 游戏类型 1 普通 2 free_spin 3: respin
  int32 which = 8; // 配置选择
}

//转动停止
message spin_stop {
  req_head head = 1;
  int32 game_id = 2; //游戏id
  int32 txn_id = 3; //交易id
}

//转动停止回复
message spin_stop_ack {
  ack_head head = 1;
  int64 amount = 2; //余额
}

// 记录菜单请求
message record_menu_req {
  req_head head = 1;
  string date = 2; // 年-月 2019-01
  int32 game_id = 3; //游戏id
  string time_zone = 4; // 时区
}

// 记录菜单日期
message record_menu_date {
  int32 date = 1; // 日期
  repeated int32 hour = 2; // 小时列表 0-23
}

// 记录菜单回复
message record_menu_ack {
  ack_head head = 1;
  repeated record_menu_date list = 2; // 日期列表
}

// 记录请求
message record_list_req {
  req_head head = 1;
  string time = 2; // 时间 分秒默认为0 2019-01-01 13:00:00
  int32 game_id = 3; //游戏id
  string time_zone = 4; // 时区
}

// 记录信息
message record_info {
  int64 time = 1; // 时间 19:44:00
  string no = 2; // 编号
  string uint = 3; // 单位 $ ￥
  int64 bet = 4; // 下注
  int64 win = 5; // 赢取
  int64 balance = 6; // 余额
}

// 记录回复
message record_list_ack {
  ack_head head = 1;
  repeated record_info list = 2; //记录列表
}

// 记录详情请求
message record_detail_req {
  req_head head = 1;
  string no = 2; // 编号
}

// 记录详情回复
message record_detail_ack {
  ack_head head = 1;
  bytes data = 2; // 详细的ack数据
}
